--- a/shop/package.json
+++ b/shop/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-image": "^1.5.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
@@ -15,6 +16,11 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "1.15.2"
   },
   "browserslist": [
     ">0.2%",
