--- a/shop/package.json
+++ b/shop/package.json
@@ -6,7 +6,10 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-image": "^1.5.1",
-    "react-scripts": "2.1.2"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +23,10 @@
   "devDependencies": {
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "prettier": "1.15.2"
+    "prettier": "1.15.2",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0"
   },
   "browserslist": [
     ">0.2%",
