--- a/shop/package.json
+++ b/shop/package.json
@@ -7,9 +7,11 @@
     "react-dom": "^16.7.0",
     "react-image": "^1.5.1",
     "react-redux": "^6.0.0",
+    "react-responsive-carousel": "^3.1.46",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
