--- a/shop/package.json
+++ b/shop/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.2.1",
+    "pure-react-carousel": "^1.17.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
     "react-image": "^1.5.1",
     "react-redux": "^6.0.0",
