--- a/shop/package.json
+++ b/shop/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "all": "0.0.0",
     "bootstrap": "^4.2.1",
     "pure-react-carousel": "^1.17.0",
     "react": "^16.7.0",
