--- a/shop/package.json
+++ b/shop/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
     "react-router-dom": "^4.3.1",
+    "react-router-transition": "^1.2.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
     "uuid": "^3.3.2"
