--- a/shop/package.json
+++ b/shop/package.json
@@ -2,7 +2,7 @@
   "name": "shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://krzychu700.github.io/React-Shop",
+  "homepage": "http://krzychu700.github.io/React-Shop#/",
   "dependencies": {
     "all": "0.0.0",
     "bootstrap": "^4.2.1",
